# CellGame

./: CMakeLists.txt  main.cpp
src/include/: Config.h
src/test/utility/: CellGameCoreTest.cpp
src/ui/widget/game/: GameWidget.cpp  GameWidget.h
src/ui/window/mainwindow/: MainWindow.cpp  MainWindow.h  mainwindow.ui
src/utility/: CellGameCore.cpp  CellGameCore.h  Rand_int.h
